--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="#course-schedule">课程安排</a></li>
                 <li><a href="#personal-goals">个人目标</a></li>
                 <li><a href="#cet-countdown">四级倒计时</a></li>
+                <li><a href="/docs/计费管理系统实验报告.pdf" target="_blank">实验报告</a></li>
             </ul>
         </nav>
     </header>
